moved index.html to root from pkg to serve with trunk, deleted static/index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>evfren</title>
 </head>
 <body>
+    <div id=""app></div>
     <script type="module">
         import init from './pkg/onlyoomfs.js';
         init();
